--- a/web/rasas_dept.xhtml
+++ b/web/rasas_dept.xhtml
@@ -50,7 +50,8 @@
                     <f:facet name="footer">
                         <center>
                             <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRasasCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
-                            <p:commandButton id="btnDelete" value="حذف الرصاص" action="#{mBRsMain.deleteRasasCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
+                            
+                            <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.deleteRasasCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
                         </center>
                     </f:facet>
                     
