--- a/web/rasas_center.xhtml
+++ b/web/rasas_center.xhtml
@@ -60,7 +60,7 @@
                     <f:facet name="footer">
                         <center>
                             <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRasasSubCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
-                            <p:commandButton id="btnDelete" value="حذف الرصاص" action="#{mBRsMain.deleteRasasSubCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
+                            <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.deleteRasasSubCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
                         </center>
                     </f:facet>
                     
