--- a/web/rasas_center.xhtml
+++ b/web/rasas_center.xhtml
@@ -34,7 +34,7 @@
 
                     
                     <p:outputLabel id="lblSubCenterNo" value="المركز : " />
-                    <h:selectOneMenu styleClass = "slctMenu" value="#{mBRsMain.subCenterNo}">
+                    <h:selectOneMenu styleClass = "slctMenu" value="#{mBRsMain.rsSubCenter}">
                         <f:selectItem itemLabel="الرقابة الجمركية" itemValue="901"/>
                         <f:selectItem itemLabel="باب 4" itemValue="902"/>
                         <f:selectItem itemLabel="ساحة 4" itemValue="903"/>
