--- a/web/rasas_center.xhtml
+++ b/web/rasas_center.xhtml
@@ -59,8 +59,8 @@
                     <br/>
                     <f:facet name="footer">
                         <center>
-                            <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRasasSubCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
-                            <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.checkRasasSubCenterToDelete()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
+                            <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRsSubCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
+                            <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.checkRsSubCenterToDelete()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
                         </center>
                     </f:facet>
                     
