--- a/web/rasas_dept.xhtml
+++ b/web/rasas_dept.xhtml
@@ -49,9 +49,9 @@
                     <br/>
                     <f:facet name="footer">
                         <center>
-                            <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRasasCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
+                            <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRsCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
                             
-                            <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.checkRasasCenterToDelete()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
+                            <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.checkRsCenterToDelete()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
                         </center>
                     </f:facet>
                     
