--- a/web/header.xhtml
+++ b/web/header.xhtml
@@ -56,7 +56,7 @@
                         <p:menuitem value="تسديد الرصاص اليدوي"/>
                     </p:submenu>
                     
-                   <p:menuitem value="الأمن والحماية"/>
+                    <p:menuitem value="الأمن والحماية" action="security"/>
                    <p:menuitem value="خروج" action="#{mBLogin.logout()}"/>
                 </p:submenu>
             </p:menubar>
