--- a/web/rasas_center.xhtml
+++ b/web/rasas_center.xhtml
@@ -25,7 +25,7 @@
         
         <br/><br/>
         <center>
-            <p:outputLabel id = "lblTitle" value="صرف رصاص لمركز"/>
+            <p:outputLabel id = "lblTitle" style ="font-size: 30px;" value="صرف رصاص لمركز"/>
         </center>
 
         <h:form styleClass="frmMain" >
