--- a/web/rasas_dept.xhtml
+++ b/web/rasas_dept.xhtml
@@ -25,7 +25,7 @@
         
         <br/><br/>
         <center>
-            <p:outputLabel id = "lblTitle" value="إستلام رصاص اللوازم"/>
+            <p:outputLabel id = "lblTitle" style ="font-size: 30px;" value="إستلام رصاص اللوازم"/>
         </center>
         
         <h:form styleClass="frmMain" >
