--- a/web/rs_main_page.xhtml
+++ b/web/rs_main_page.xhtml
@@ -20,7 +20,7 @@
         <p:growl id="growl" showDetail="true" life="5000"/>
         
         <ui:insert name="header">
-		<ui:include src="header.xhtml" />
+		<ui:include src="rs_header_page.xhtml" />
 	</ui:insert>
        
     </h:body>
