--- a/web/pages/rs_center_page.xhtml
+++ b/web/pages/rs_center_page.xhtml
@@ -53,8 +53,8 @@
                         <f:facet name="footer">
                             <center>
                                 <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRsCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
-
                                 <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.checkRsCenterToDelete()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
+                                <p:commandButton value="تفريغ الحقول" type="reset" />
                             </center>
                         </f:facet>
 
