--- a/web/pages/rs_change_pass_page.xhtml
+++ b/web/pages/rs_change_pass_page.xhtml
@@ -44,7 +44,7 @@
                         <br/>
                         <f:facet name="footer">
                             <center>
-                                <p:commandButton id="btnUpdate" value="تعديل كلمة السر"  action="#{mBUsers.checkUserToUpdatePassword()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}" />
+                                <p:commandButton id="btnUpdate" value="تعديل كلمة السر"  action="#{mBUsers.checkUserToUpdatePassword()}" disabled="#{mBViewsPrivileges.getBtnPrivilege(component.id)}" />
                                 <p:commandButton value="تفريغ الحقول" type="reset" />
                             </center>
                         </f:facet>
