--- a/web/pages/rs_subcenter_page.xhtml
+++ b/web/pages/rs_subcenter_page.xhtml
@@ -56,8 +56,8 @@
                         <br/>
                         <f:facet name="footer">
                             <center>
-                                <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRsSubCenter()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}" />
-                                <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.checkRsSubCenterToDelete()}" disabled="#{mBViewPrivilege.getBtnPrivilege(component.id)}"/>
+                                <p:commandButton id="btnSave" value="صرف الرصاص" action="#{mBRsMain.checkRsSubCenter()}" disabled="#{mBViewsPrivileges.getBtnPrivilege(component.id)}" />
+                                <p:commandButton id="btnDelete" value="إلغاء صرف الرصاص" action="#{mBRsMain.checkRsSubCenterToDelete()}" disabled="#{mBViewsPrivileges.getBtnPrivilege(component.id)}"/>
                                 <p:commandButton value="تفريغ الحقول" type="reset" />
                             </center>
                         </f:facet>
