--- a/web/pages/rs_center_page.xhtml
+++ b/web/pages/rs_center_page.xhtml
@@ -26,7 +26,7 @@
         <div id="container">
 
             <center>
-                <p:outputLabel id = "lblTitle" style ="font-size: 30px;" value="إستلام رصاص اللوازم"/>
+                <p:outputLabel id = "lblTitle" style ="font-size: 30px;" value="صرف رصاص اللوازم"/>
             </center>
 
             <h:form styleClass="frmMain" >
@@ -35,7 +35,7 @@
 
                         <p:outputLabel id="lblCenterNo" value="المركز : " />
                         <h:selectOneMenu styleClass = "slctMenu" value ="#{mBRsMain.rsCenter}">
-                            <f:selectItems value="#{mBCenters.centers}" var = "center" itemLabel="#{center.centerNo} -- #{center.centerName}" itemValue="#{center.centerNo}"/>
+                            <f:selectItems value="#{mBCenters.centers}" var = "center" itemLabel="#{center.centerNo} - #{center.centerName}" itemValue="#{center.centerNo}"/>
                         </h:selectOneMenu>
 
                         <p:outputLabel id="lblCurrentYear" value=" السنة : "/>
