--- a/web/pages/rs_security_page.xhtml
+++ b/web/pages/rs_security_page.xhtml
@@ -38,32 +38,34 @@
                             <h:form id = "frmTabUsers">
                                 <h:panelGrid  id = "pnlUserInfo" columns="2" style = "width: 100%" cellpadding="5">
                                     <p:outputLabel value="الرقم الوظيفي : " />
-                                    <p:inputText   id = "txtUserId" value="#{mBUsers.userId}" styleClass="txtCenter" maxlength = "10" placeholder="الرقم الوظيفي" />
+                                    <p:inputText   id = "txtUserId" value="#{mBUsers.userId}" styleClass="txtSecurity" maxlength = "10" placeholder="الرقم الوظيفي" />
 
                                     <p:outputLabel value="اسم الموظف : " />
-                                    <p:inputText   value="#{mBUsers.userName}"  maxlength = "50" placeholder="اسم الموظف" />
+                                    <p:inputText   value="#{mBUsers.userName}"  styleClass="txtSecurity" maxlength = "50" placeholder="اسم الموظف" />
 
                                     <p:outputLabel value="المركز : "/>
-                                    <h:selectOneMenu styleClass = "slctMenu" value ="#{mBUsers.userCenter}">
+                                    <h:selectOneMenu styleClass = "slctMenuSecurity" value ="#{mBUsers.userCenter}">
+                                        <p:ajax update=":tabViewSecurity:frmTabUsers:slctSubCenters"/>
                                         <f:selectItem itemLabel="إختر المركز"/>
-                                        <f:selectItems value="#{mBCenters.centers}" var = "center" itemLabel="#{center.centerName}" itemValue="#{center.centerNo}"/>
+                                        <f:selectItems value="#{mBCenters.centers}" var = "center" itemLabel="#{center.centerNo} - #{center.centerName}" itemValue="#{center.centerNo}"/>
+                                        
                                     </h:selectOneMenu>
 
                                     <p:outputLabel value="القسم : "/>
-                                    <h:selectOneMenu id ="slctSubCenters" styleClass = "slctMenu" value ="#{mBUsers.userSubCenter}">
+                                    <h:selectOneMenu id ="slctSubCenters" styleClass = "slctMenuSecurity" value ="#{mBUsers.userSubCenter}">
                                         <f:selectItem itemLabel="إختر القسم"/>
-                                        <f:selectItems value="#{mBSubCenters.subCentersByCenterNo}" var = "subCenter" itemLabel="#{subCenter.subCenterName}" itemValue="#{subCenter.subCenterNo}"/>
+                                        <f:selectItems value="#{mBUsers.subCentersByCenterNo}" var = "subCenter" itemLabel="#{subCenter.centerNo} - #{subCenter.subCenterNo} -- #{subCenter.subCenterName}" itemValue="#{subCenter.subCenterNo}"/>
                                     </h:selectOneMenu>
 
                                     <p:outputLabel value="صفة المستخدم : "/>
-                                    <h:selectOneMenu styleClass = "slctMenu" value ="#{mBUsers.userType}">
+                                    <h:selectOneMenu styleClass = "slctMenuSecurity" value ="#{mBUsers.userType}">
                                         <f:selectItem itemLabel="إختر الصفة"/>
                                         <f:selectItem itemLabel="مستخدم" itemValue="U"/>
                                         <f:selectItem itemLabel="مجموعة" itemValue="G"/>
                                     </h:selectOneMenu>
 
                                     <p:outputLabel value="الصلاحيات"/>
-                                    <h:selectOneMenu styleClass = "slctMenu" value ="#{mBUsers.privilege}" >
+                                    <h:selectOneMenu styleClass = "slctMenuSecurity" value ="#{mBUsers.privilege}" >
                                         <f:selectItem itemLabel="إختر الصلاحية"/>
                                         <f:selectItem itemLabel="مدير للنظام" itemValue="1"/>
                                         <f:selectItem itemLabel="صلاحية على برنامج معين" itemValue="2"/>
@@ -71,7 +73,7 @@
                                     </h:selectOneMenu>
 
                                     <p:outputLabel value="كلمة السر : "/>
-                                    <p:password value="#{mBUsers.password}" styleClass="txtCenter" maxlength="10" redisplay="true" readonly="#{mBUsers.userTxtPasswordEdit}" placeholder="كلمة السر"/>
+                                    <p:password value="#{mBUsers.password}" styleClass="txtSecurity" maxlength="10" redisplay="true" readonly="#{mBUsers.userTxtPasswordEdit}" placeholder="كلمة السر"/>
 
                                     <br/>
                                     <f:facet name="footer">
@@ -87,7 +89,7 @@
                                 <h:panelGrid id="pnlUsersList" columns="1" style = "width: 100%" cellpadding="5" >
                                     <p:outputLabel  value="بحث برقم الموظف : " />
                                     
-                                    <p:selectOneListbox id="searchUsers" value="#{mBUsers.userId}" filter="true" filterMatchMode="contains" style="width: 300px; height: 250px; margin-top: 0;">
+                                    <p:selectOneListbox id="searchUsers" value="#{mBUsers.userId}" filter="true" filterMatchMode="contains" style="width: 500px; height: 250px; margin-top: 0;">
                                         <p:ajax listener="#{mBUsers.loadUserInfo()}" update=":tabViewSecurity:frmTabUsers:pnlUserInfo"/>
                                         <f:selectItems value="#{mBUsers.allUsersByCenter}" var="users" itemLabel="#{users.userId} &ensp;&ensp; #{users.userName}" itemValue="#{users.userId}"/>
                                     </p:selectOneListbox>
@@ -103,7 +105,7 @@
 
                             <h:panelGrid  columns="2" style = "width: 50%; margin-top: 5%;" cellspacing="5" >
                                 <p:outputLabel  value="اسم المجموعة : " />
-                                <h:selectOneMenu styleClass = "slctMenu" value ="#{mBGroupMembers.groupId}">
+                                <h:selectOneMenu styleClass = "slctMenuSecurity" value ="#{mBGroupMembers.groupId}">
                                     <p:ajax  update=":tabViewSecurity:frmGroupsList:pnlGroupMembersList tabViewSecurity:frmGroupsList:pnlGroupsMembersList"/>
                                     <f:selectItem itemLabel="إختر المجموعة"/>
                                     <f:selectItems value="#{mBUsers.allGroups}" var="allGroups" itemLabel="#{allGroups.userName}" itemValue="#{allGroups.userId}"/>
@@ -148,10 +150,10 @@
                             <h:form id = "frmTabView">
                                 <h:panelGrid  id = "pnlViewInfo" columns="2" style = "width: 100%" cellpadding="5">
                                     <p:outputLabel value="رمز الشاشة : " />
-                                    <p:inputText   id = "txtViewId" value="#{mBViews.viewId}" styleClass="txtCenter" maxlength = "50" placeholder="رمز الشاشة" />
+                                    <p:inputText   id = "txtViewId" value="#{mBViews.viewId}" styleClass="txtSecurity" maxlength = "50" placeholder="رمز الشاشة" />
 
                                     <p:outputLabel value="اسم الشاشة : " />
-                                    <p:inputText   value="#{mBViews.viewName}"  maxlength = "100" placeholder="اسم الشاشة" />
+                                    <p:inputText   value="#{mBViews.viewName}"  styleClass="txtSecurity" maxlength = "100" placeholder="اسم الشاشة" />
                                     <br/>
                                     <f:facet name="footer">
                                         <center>
@@ -178,7 +180,7 @@
 
                             <h:panelGrid  columns="2" style = "width: 50%; margin-top: 5%;" cellspacing="5" >
                                 <p:outputLabel  value="اسم المجموعة : " />
-                                <h:selectOneMenu styleClass = "slctMenu" value ="#{mBViewsPrivileges.groupId}">
+                                <h:selectOneMenu styleClass = "slctMenuSecurity" value ="#{mBViewsPrivileges.groupId}">
                                     <p:ajax listener="#{mBViewsPrivileges.loadViewsPrivilegeListByGroupId()}" update=":tabViewSecurity:frmPrivilegeList:pnlViewsPrivilegeList"/>
                                     <f:selectItem itemLabel="إختر المجموعة"/>
                                     <f:selectItems value="#{mBUsers.allGroups}" var="allGroups" itemLabel="#{allGroups.userName}" itemValue="#{allGroups.userId}"/>
