--- a/web/pages/rs_change_pass_page.xhtml
+++ b/web/pages/rs_change_pass_page.xhtml
@@ -38,7 +38,7 @@
 
                         <p:outputLabel id="newPassword1" value="كلمة السر الجديدة : " />
                         <p:password value="#{mBUsers.newPassword}" placeholder="كلمة السر الجديدة " />
-                        <p:outputLabel id="newPassword2" value="إعادة كتابة كلمة السر "/>
+                        <p:outputLabel id="newPassword2" value="إعادة كتابة كلمة السر: "/>
                         <p:password value="#{mBUsers.retypeNewPassword}" placeholder= "إعادة كتابة كلمة السر "/>
 
                         <br/>
