--- a/web/pages/rs_center_page.xhtml
+++ b/web/pages/rs_center_page.xhtml
@@ -40,7 +40,7 @@
 
                         <p:outputLabel id="lblCurrentYear" value=" السنة : "/>
                         <h:selectOneMenu styleClass = "slctMenu" value="#{mBRsMain.rsYear}">
-                            <f:selectItems value="#{mBRsMain.yearsList}" var="rsYearList" itemLabel="#{rsYearList}" itemValue="#{rsYearList}"/>
+                            <f:selectItems value="#{mBCommon.yearsList}" var="rsYearList" itemLabel="#{rsYearList}" itemValue="#{rsYearList}"/>
                         </h:selectOneMenu>
 
                         <p:outputLabel id="lblRsFrom" value="من رصاص : "/>
